feat: preliminary result of POST /payment/...
